--- a/docs/_sass/syntax-highlighting.scss
+++ b/docs/_sass/syntax-highlighting.scss
@@ -1,6 +1,6 @@
 pre.highlight {
   border: 1px solid #03bb0033;
-  background-color: #03bb0022;
+  background-color: var(--color--primary--10);
   border-radius: var(--borderRadius--normal);
   font-family: monospace;
   overflow-x: auto;
