--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -27,7 +27,9 @@
       <header class="SiteHeader">
         <div class="SiteHeader-content">
           <div class="SiteHeader-logo">
-            <h1 class="SiteHeader-logoText">CometBFT</h1>
+            <h1 class="SiteHeader-logoText">
+              <a href="/">CometBFT</a>
+            </h1>
             <h2 class="SiteHeader-logoSubtext">Documentation</h2>
           </div>
 
