Enable smooth scrolling

--- a/docs/_sass/layout.scss
+++ b/docs/_sass/layout.scss
@@ -4,6 +4,8 @@
   --whiteSpace--normal: 1rem;
   --whiteSpace--loose: 2rem;
   --whiteSpace--xLoose: 4rem;
+
+  scroll-behavior: smooth;
 }
 
 .GridLayout {
