--- a/docs/_sass/typography.scss
+++ b/docs/_sass/typography.scss
@@ -79,6 +79,20 @@
     }
   }
 
+  blockquote {
+    border-left: 2px solid var(--color--border);
+    color: var(--color--text--faded);
+    @include paddingLeft(normal);
+  }
+
+  em {
+    font-style: italic;
+  }
+
+  strong {
+    font-weight: bold;
+  }
+
   h1,
   h2,
   h3,
@@ -138,10 +152,14 @@
   }
 
   table {
-    border: 1px solid var(--color--border);
     border-collapse: separate;
     border-radius: var(--borderRadius--normal);
+    border: 1px solid var(--color--border);
+    display: block;
     font-family: monospace;
+    margin: 0 auto;
+    max-width: fit-content;
+    overflow-x: auto;
   }
 
   td,
